--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -15,7 +15,7 @@ on:
     
 env:
   ROM_URL: https://www.coolapk.com/link?url=https%3A%2F%2Fdownload.meizu.com%2FFirmware%2FFlyme%2Fmeizu17_Pro%2F9.21.3.3%2Fcn_daily%2F20210303140148%2F61dcf238%2Fupdate.zip
-  ROM_NAME: OxygenOS
+  ROM_NAME: Flyme
   TZ: Asia/Shanghai
 
 jobs:
